# vulnerable-ecommerce-app

./: .gitignore  AUTHORS  LICENSE  README.md  config.js  document.md  evil.html  main.py  pyproject.toml  seed.py
app/: __init__.py  models.py
app/routes/: account.py  auth.py  orders.py  products.py  shop.py
app/templates/: account.html  admin_orders.html  base.html  buy.html  buy_success.html  change_password.html  edit_profile.html  home.html  login.html  my_orders.html  order_detail.html  product_detail.html
tests/: conftest.py  test_phase2_csrf.py
tests/csrf/: test_phase1_auth.py  test_phase2_csrf.py  test_phase3_wiring.py  test_phase4_checklist.py
