[project]
name = "shopvuln"
version = "0.1.0"
description = ""
authors = [
    {name = "Siranat P",email = "6610685353@student.tu.ac.th"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "flask (>=3.1.3,<4.0.0)"
]

[tool.poetry]
packages = [{include = "shopvuln", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)"
]
